# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Auth\AuthController;
 use App\Http\Controllers\CompanyController;
 use App\Http\Controllers\DashboardController;
+use App\Http\Controllers\ScreenerController;
 use App\Http\Controllers\ShariahController;
 use App\Http\Controllers\WatchlistController;
 use Illuminate\Support\Facades\Route;
@@ -20,6 +21,9 @@ Route::prefix('v1')->group(function () {
 
     Route::get('/shariah/status/{stockCode}', [ShariahController::class, 'status']);
     Route::get('/shariah/securities', [ShariahController::class, 'securities']);
+
+    Route::get('/screener', [ScreenerController::class, 'index']);
+    Route::get('/sectors', [ScreenerController::class, 'sectors']);
 
     Route::middleware('auth:sanctum')->group(function () {
         Route::post('/auth/logout', [AuthController::class, 'logout']);
